<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.takfireapp.takapp.MainActivity">
    <item
        android:id="@+id/action_settings_del"
        android:orderInCategory="700"
        android:title="@string/action_settings_del"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="800"
        android:title="@string/action_settings"
        app:showAsAction="never" />+

    <item
        android:id="@+id/action_settings_backup"
        android:orderInCategory="100"
        android:title="@string/action_backup"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_load"
        android:orderInCategory="200"
        android:title="@string/action_restore"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="600"
        android:title="@string/action_file_delete"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_clear"
        android:orderInCategory="700"
        android:title="@string/action_clear"
        app:showAsAction="never" />
</menu>